<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    tools:context=".FindActivity">

    <Spinner
        android:id="@+id/studgSp"
        android:layout_width="263dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="45dp"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/semesterSp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/semesterSp"
        android:layout_width="263dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findTitleTxtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif-monospace"
        android:text="@string/FindButton"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/modulSp"
        android:layout_width="263dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:popupBackground="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semesterSp" />

    <TextView
        android:id="@+id/studgTxV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/StudiengangTxV"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/studgSp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/semesterTxV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/SemesterTxV"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/semesterSp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/modulTxV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ModulTxV"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/modulSp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorPrimary"
        android:text="@string/SearchButton"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modulSp" />

</android.support.constraint.ConstraintLayout>